Doc de Venta Arreglado

--- a/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -18,23 +18,24 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
    <children>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0">
          <children>
-            <TableView fx:id="tabla_salidas" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="226.0">
+            <TableView fx:id="tabla_salidas" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="242.0">
                <columns>
                   <TableColumn fx:id="columna_cod_salida" prefWidth="93.0" text="Código" />
                   <TableColumn fx:id="columna_tipo_salida" prefWidth="67.0" text="Tipo" />
+                  <TableColumn fx:id="columna_estado" prefWidth="75.0" text="Estado" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <TextField fx:id="salida_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
-            <Button layoutX="136.0" layoutY="178.0" mnemonicParsing="false" onAction="#buscar_salida" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
+            <TextField fx:id="salida_buscar" layoutX="127.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
+            <Button layoutX="146.0" layoutY="181.0" mnemonicParsing="false" onAction="#buscar_salida" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
-            <ComboBox fx:id="tipo_buscar" layoutX="119.0" layoutY="120.0" prefHeight="27.0" prefWidth="114.0" />
+            <ComboBox fx:id="tipo_buscar" layoutX="127.0" layoutY="121.0" prefHeight="27.0" prefWidth="114.0" />
             <Label layoutX="20.0" layoutY="124.0" prefHeight="21.0" prefWidth="96.0" text="Tipo :">
                <font>
                   <Font size="14.0" />
