--- a/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
+++ b/src/main/java/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -68,7 +67,7 @@
             <AnchorPane layoutX="2.0" layoutY="2.0" prefHeight="50.0" prefWidth="749.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="133.0" layoutY="10.0" text="Documento de venta:">
+                  <Label layoutX="33.0" layoutY="10.0" text="Documento de venta:">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -88,35 +87,35 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="tabla_detalle" layoutX="12.0" layoutY="192.0" prefHeight="162.0" prefWidth="722.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="192.0">
+                  <TableView fx:id="tabla_detalle" layoutX="12.0" layoutY="192.0" prefHeight="195.0" prefWidth="722.0" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="192.0">
                     <columns>
-                      <TableColumn fx:id="columna_cantidad" prefWidth="86.0" text="Cantidad" />
                         <TableColumn fx:id="columna_codigo" prefWidth="77.0" text="Código" />
                         <TableColumn fx:id="columna_descripcion" prefWidth="182.0" text="Descripción" />
-                        <TableColumn fx:id="columna_pu" prefWidth="55.33331298828125" text="P.U." />
-                        <TableColumn fx:id="columna_descuento" prefWidth="97.66668701171875" text="Descuentos" />
-                        <TableColumn fx:id="columna_flete" prefWidth="125.0" text="flete" />
+                      <TableColumn fx:id="columna_cantidad" prefWidth="97.0" text="Cantidad" />
+                        <TableColumn fx:id="columna_pu" prefWidth="62.0" text="P.U." />
+                        <TableColumn fx:id="columna_descuento" prefWidth="81.0" text="Descuentos" />
+                        <TableColumn fx:id="columna_flete" prefWidth="125.0" text="Flete" />
                         <TableColumn fx:id="columna_subtotal" prefWidth="97.0" text="Subtotal" />
                     </columns>
                   </TableView>
-                  <Label layoutX="12.0" layoutY="374.0" text="SubTotal Ventas:">
+                  <Label layoutX="521.0" layoutY="400.0" text="SubTotal Ventas:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="364.0" layoutY="374.0" text="IGV">
+                  <Label layoutX="521.0" layoutY="438.0" text="IGV">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="13.0" layoutY="423.0" text="Importe Total:">
+                  <Label layoutX="521.0" layoutY="480.0" text="Importe Total:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="subtotal" editable="false" layoutX="133.0" layoutY="376.0" prefHeight="25.0" prefWidth="178.0" />
-                  <TextField fx:id="igv_total" editable="false" layoutX="423.0" layoutY="372.0" prefHeight="25.0" prefWidth="163.0" />
-                  <TextField fx:id="importe_total" editable="false" layoutX="133.0" layoutY="421.0" prefHeight="25.0" prefWidth="178.0" />
+                  <TextField fx:id="subtotal" editable="false" layoutX="638.0" layoutY="398.0" prefHeight="25.0" prefWidth="96.0" />
+                  <TextField fx:id="igv_total" editable="false" layoutX="640.0" layoutY="436.0" prefHeight="25.0" prefWidth="96.0" />
+                  <TextField fx:id="importe_total" editable="false" layoutX="643.0" layoutY="477.0" prefHeight="25.0" prefWidth="96.0" />
                   <TitledPane animated="false" collapsible="false" layoutX="12.0" layoutY="24.0" prefHeight="162.0" prefWidth="727.0" text="Información General">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="712.0">
@@ -128,7 +127,7 @@
                                           <Font size="14.0" />
                                        </font>
                                     </Label>
-                                    <Label layoutX="323.0" layoutY="53.0" text="Fecha:">
+                                    <Label layoutX="14.0" layoutY="98.0" text="Fecha:">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
@@ -138,44 +137,38 @@
                                           <Font size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="nombre_cliente" layoutX="149.0" layoutY="13.0" prefHeight="25.0" prefWidth="154.0" />
-                                    <Label fx:id="VerDocumentoLabel" layoutX="323.0" layoutY="16.0" text="DNI:">
+                                    <TextField fx:id="nombre_cliente" layoutX="98.0" layoutY="12.0" prefHeight="25.0" prefWidth="156.0" />
+                                    <Label fx:id="VerDocumentoLabel" layoutX="292.0" layoutY="14.0" text="DNI:">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="dni_cliente" layoutX="378.0" layoutY="14.0" prefHeight="25.0" prefWidth="120.0" />
-                                    <DatePicker fx:id="fecha_emision" layoutX="382.0" layoutY="51.0" prefHeight="25.0" prefWidth="120.0" />
-                                    <ComboBox fx:id="ver_moneda" layoutX="147.0" layoutY="50.0" prefHeight="25.0" prefWidth="153.0" />
-                                    <Label fx:id="VerDocumentoLabel1" layoutX="524.0" layoutY="17.0" text="RUC">
+                                    <TextField fx:id="dni_cliente" editable="false" layoutX="335.0" layoutY="12.0" prefHeight="25.0" prefWidth="120.0" />
+                                    <DatePicker fx:id="fecha_emision" layoutX="98.0" layoutY="96.0" prefHeight="25.0" prefWidth="163.0" />
+                                    <Label fx:id="VerDocumentoLabel1" layoutX="496.0" layoutY="15.0" text="RUC:">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="ruc_cliente" layoutX="578.0" layoutY="15.0" prefHeight="25.0" prefWidth="96.0" />
+                                    <TextField fx:id="ruc_cliente" editable="false" layoutX="545.0" layoutY="12.0" prefHeight="25.0" prefWidth="130.0" />
                                     <Label layoutX="326.0" layoutY="98.0" text="Guia de Remision">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="guia_remision_busqueda" layoutX="468.0" layoutY="96.0" prefHeight="25.0" prefWidth="154.0" />
-                                    <Button fx:id="buscar_guia_remision" layoutX="651.0" layoutY="97.0" mnemonicParsing="false" onAction="#agregar_guia_remision" prefHeight="20.0" prefWidth="20.0" text="+">
+                                    <TextField fx:id="guia_remision_busqueda" editable="false" layoutX="468.0" layoutY="96.0" prefHeight="25.0" prefWidth="178.0" />
+                                    <Button fx:id="buscar_guia_remision" layoutX="665.0" layoutY="97.0" mnemonicParsing="false" onAction="#agregar_guia_remision" prefHeight="23.0" prefWidth="30.0" text="+">
                                        <font>
                                           <Font size="10.0" />
                                        </font>
                                     </Button>
-                                    <Label fx:id="VerDocumentoLabel11" layoutX="524.0" layoutY="52.0" text="Codigo">
+                                    <Label layoutX="292.0" layoutY="52.0" text="Tipo de documento">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="codigo_venta" layoutX="578.0" layoutY="50.0" prefHeight="25.0" prefWidth="96.0" />
-                                    <Label layoutX="15.0" layoutY="98.0" text="Tipo de documento">
-                                       <font>
-                                          <Font size="14.0" />
-                                       </font>
-                                    </Label>
-                                    <ComboBox fx:id="tipo_doc" layoutX="148.0" layoutY="96.0" prefHeight="25.0" prefWidth="153.0" />
+                                    <TextField fx:id="ver_moneda" editable="false" layoutX="98.0" layoutY="50.0" prefHeight="25.0" prefWidth="156.0" />
+                                    <TextField fx:id="tipo_doc" editable="false" layoutX="452.0" layoutY="50.0" />
                                  </children>
                               </AnchorPane>
                            </children>
