--- a/src/main/java/fxml/Despachos/NotaDeCredito/NotaDeCredito.fxml
+++ b/src/main/java/fxml/Despachos/NotaDeCredito/NotaDeCredito.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Despachos.NotaDeCreditoController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Despachos.NotaDeCreditoController">
    <children>
       <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="572.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -88,37 +87,19 @@
                   </AnchorPane>
                   <AnchorPane fx:id="pedidoTable" layoutY="228.0" maxHeight="317.0" maxWidth="750.0" prefHeight="317.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="212.0">
                      <children>
-                        <AnchorPane prefHeight="40.0" prefWidth="750.0" AnchorPane.bottomAnchor="277.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Label layoutX="14.0" layoutY="5.0" text="Cantidad">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <Spinner fx:id="cantidad_producto" layoutX="102.0" layoutY="3.0" prefHeight="25.0" prefWidth="58.0" />
-                              <Label layoutX="195.0" layoutY="6.0" text="Producto:">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <TextField fx:id="VerProducto" layoutX="267.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
-                              <Button fx:id="buscarProducto" layoutX="516.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleModalProducto" prefHeight="20.0" prefWidth="20.0" text="+">
-                                 <font>
-                                    <Font size="10.0" />
-                                 </font>
-                              </Button>
-                           </children>
-                        </AnchorPane>
+                        <AnchorPane prefHeight="40.0" prefWidth="750.0" AnchorPane.bottomAnchor="277.0" AnchorPane.topAnchor="0.0" />
                         <AnchorPane layoutX="33.0" layoutY="44.0" prefHeight="277.0" prefWidth="555.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="40.0">
                            <children>
-                              <AnchorPane prefHeight="277.0" prefWidth="555.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                              <TextField fx:id="igvNC" editable="false" layoutX="432.0" layoutY="264.0" prefHeight="25.0" prefWidth="120.0" text="0.00" />
-                              <TextField fx:id="subtotalNC" editable="false" layoutX="432.0" layoutY="236.0" prefHeight="13.0" prefWidth="120.0" text="0.00" />
-                              <Label layoutX="356.0" layoutY="295.0" text="Total: " />
-                              <Label layoutX="356.0" layoutY="268.0" text="I.G.V. (18%):" />
-                              <Label layoutX="355.0" layoutY="240.0" text="Subtotal: " />
-                              <TextField fx:id="totalNC" editable="false" layoutX="432.0" layoutY="292.0" prefHeight="13.0" prefWidth="120.0" promptText="0.00" />
-                              <TableView fx:id="TablaProductos" prefHeight="230.0" prefWidth="555.0" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <AnchorPane prefHeight="320.0" prefWidth="727.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-172.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <TextField fx:id="igvNC" editable="false" layoutX="593.0" layoutY="260.0" prefHeight="25.0" prefWidth="120.0" text="0.00" />
+                                    <TextField fx:id="subtotalNC" editable="false" layoutX="593.0" layoutY="232.0" prefHeight="13.0" prefWidth="120.0" text="0.00" />
+                                    <Label layoutX="517.0" layoutY="291.0" text="Total: " />
+                                    <Label layoutX="517.0" layoutY="264.0" text="I.G.V. (18%):" />
+                                    <Label layoutX="516.0" layoutY="236.0" text="Subtotal: " />
+                                    <TextField fx:id="totalNC" editable="false" layoutX="593.0" layoutY="288.0" prefHeight="13.0" prefWidth="120.0" promptText="0.00" />
+                                 </children></AnchorPane>
+                              <TableView fx:id="TablaProductos" layoutY="-22.0" prefHeight="240.0" prefWidth="710.0" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-155.0" AnchorPane.topAnchor="-22.0">
                                  <columns>
                                     <TableColumn fx:id="codProdColumn" prefWidth="75.0" text="Cod." />
                                     <TableColumn fx:id="nombreProdColumn" prefWidth="132.0" text="Nombre" />
@@ -132,18 +113,6 @@
                               </TableView>
                            </children>
                         </AnchorPane>
-                        <TitledPane animated="false" collapsible="false" layoutX="565.0" layoutY="37.0" prefHeight="317.0" prefWidth="177.0" text="Acciones" AnchorPane.bottomAnchor="3.0">
-                           <content>
-                              <AnchorPane prefHeight="226.0" prefWidth="175.0">
-                                 <children>
-                                    <Button fx:id="bttn_agregar_prod" layoutX="71.0" layoutY="31.799999999999997" mnemonicParsing="false" onAction="#agregar_producto" prefHeight="40.0" prefWidth="40.0" text="A" AnchorPane.topAnchor="31.799999999999997" />
-                                    <Button fx:id="bttn_eliminar_prod" layoutX="71.0" layoutY="155.0" mnemonicParsing="false" onAction="#eliminar_producto" prefHeight="40.0" prefWidth="40.0" text="X" />
-                                    <Label layoutX="42.0" layoutY="100.0" text="Agregar Producto" />
-                                    <Label layoutX="43.0" layoutY="195.0" text="Eliminar Producto" />
-                                 </children>
-                              </AnchorPane>
-                           </content>
-                        </TitledPane>
                      </children>
                   </AnchorPane>
                   <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="162.0" prefWidth="727.0" text="Información General" AnchorPane.bottomAnchor="360.0" AnchorPane.topAnchor="50.0">
