--- a/src/main/java/fxml/Seguridad/Login.fxml
+++ b/src/main/java/fxml/Seguridad/Login.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPaneLogin" maxHeight="700.0" maxWidth="1200.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.LoginController">
+<AnchorPane id="AnchorPaneLogin" maxHeight="700.0" maxWidth="1200.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.LoginController">
    <children>
       <ImageView fitHeight="700.0" fitWidth="1200.0" layoutY="29.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="29.5" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.5">
          <image>
@@ -30,8 +30,8 @@
                   <Font size="26.0" />
                </font>
             </Label>
-            <Label layoutX="350.0" layoutY="331.0" text="¿Olvidaste tu contraseña?" textFill="WHITE" AnchorPane.bottomAnchor="36.0" />
-            <Hyperlink layoutX="490.0" layoutY="328.0" onAction="#abrirOlvidarContrasenha" text="Recuperar" AnchorPane.bottomAnchor="34.0" />
+            <Label layoutX="350.0" layoutY="331.0" text="¿Olvidaste tu contraseña?" textFill="WHITE" visible="false" AnchorPane.bottomAnchor="36.0" />
+            <Hyperlink layoutX="490.0" layoutY="328.0" text="Recuperar" visible="false" AnchorPane.bottomAnchor="34.0" />
             <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #FFFFFF;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="62.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="126.0">
